[FIX] html_editor: ensure consistent `::marker` visibility and position
**Problem**:
- `::marker` elements are not properly visible when changing list font size.
- Inconsistencies in marker positioning as `list-style-position` is
  `inside` only when font size changes, but remains `outside` by default.

**Solution**:
As discussed with PO, we will always use `list-style-position: outside`.
To ensure proper visibility for large font sizes, we adjust the
`padding-left` of `ol`.

**Steps to Reproduce**:
1. Add text.
2. Transform text into a centered list.
   - Marker remains left-aligned (default behavior).
3. Change the text font size.
   - **Issue**: Marker moves inside the list, making it inconsistent.
4. Switch a numbered list to an unordered list, then back to numbered.
   - **Issue**: Marker moves out of the viewport.

**opw-4655466**

--- a/addons/html_editor/static/src/main/hint.scss
+++ b/addons/html_editor/static/src/main/hint.scss
@@ -5,12 +5,12 @@
         content: attr(o-we-hint-text);
         position: absolute;
         top: 0;
-        left: var(--placeholder-left, 0px);
+        left: 0;
         display: block;
         color: inherit;
         opacity: 0.4;
         pointer-events: none;
         text-align: inherit;
-        width: calc(100% - var(--placeholder-left, 0px));
+        width: 100%;
     }
 }
